# dioxus-play

./: .gitignore  .justfile  Cargo.toml  Dioxus.toml  README.md  config.sops.env
.claude/: CLAUDE.md
.config/: mise.toml
.github/workflows/: renovate.yaml
assets/: main.css  tailwind.css
src/: backend.rs  main.rs
src/components/: favorites.rs  nav.rs
